tests/NormalTests/paczka1/small_fuzzy/40039809.err
Error in line 1: XWw17 S219 64,9
Error in line 5: XWw17 S669 56,7
Error in line 12: yDQ05 A368 93,1
Error in line 16: ELukveyBc S219 20,24
